[package]
name = "advent_code_2016"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[[bin]]
name = "day_1"
path = "src/day_1/main.rs"

[[bin]]
name = "day_2"
path = "src/day_2/main.rs"

[[bin]]
name = "day_3"
path = "src/day_3/main.rs"

[[bin]]
name = "day_4"
path = "src/day_4/main.rs"

[[bin]]
name = "day_5"
path = "src/day_5/main.rs"

[[bin]]
name = "day_6"
path = "src/day_6/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
regex = "1.5.4"
md5 = "0.7.0"