[package]
name = "advent_code_2016"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[[bin]]
name = "day_1"
path = "src/day_1/main.rs"

[[bin]]
name = "day_2"
path = "src/day_2/main.rs"

[[bin]]
name = "day_3"
path = "src/day_3/main.rs"

[[bin]]
name = "day_4"
path = "src/day_4/main.rs"

[[bin]]
name = "day_5"
path = "src/day_5/main.rs"

[[bin]]
name = "day_6"
path = "src/day_6/main.rs"

[[bin]]
name = "day_7"
path = "src/day_7/main.rs"

[[bin]]
name = "day_8"
path = "src/day_8/main.rs"

[[bin]]
name = "day_9"
path = "src/day_9/main.rs"

[[bin]]
name = "day_10"
path = "src/day_10/main.rs"

[[bin]]
name = "day_11"
path = "src/day_11/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
regex = "1.5.4"
md5 = "0.7.0"
fancy-regex = "0.7.1"
ndarray = "0.15.4"
lazy_static = "1.4.0"